fix: sort dq groups with unsaved rules first, more spacing between groups

--- a/seed/static/seed/scss/style.scss
+++ b/seed/static/seed/scss/style.scss
@@ -3232,6 +3232,19 @@ div.table_list_container.matching, div.table_list_container.matching_detail {
   }
 }
 
+#data-quality-admin-table {
+  tr:first-child td {
+    padding-top: 16px;
+  }
+  tr:last-child td {
+    padding-bottom: 16px;
+  }
+
+  tr:not(:last-child) td {
+    border-bottom: 0 none;
+  }
+}
+
 #column-table, #members-table {
   input.ng-invalid-required {
     border-color: #dd2c00;
